$Id$

2013-11-07  Matt Kraai  <...>

	smartctl.cpp: Add missing stdlib.h.
	This fixes build on QNX 6.3.2 (ticket #300).

2013-11-07  Roger Röhrig  <...>

	drivedb.h: Intel DC S3500 Series SSDs: Add -F xerrorlba.

2013-11-07  Roger Röhrig  <...>

	atacmds.cpp: Fix Extended Comprehensive Error Log timestamp
	byte order on big endian machines.

2013-09-12  Christoph Egger  <christoph@debian.org>

	dev_areca.h: Fix build on kFreeBSD (Debian bug 717567).
	This obsoletes Debian kfreebsd.patch.

2013-08-17  Christian Franke  <franke@computer.org>

	examplescripts: Add scripts from Debian and Fedora packages.

2013-08-17  Christian Franke  <franke@computer.org>

	Add spaces between string literals and macro identifiers.
	This avoids the interpretation as user-defined literals if
	C++11 is enabled (g++ -std=gnu++11).

2013-08-15 Dan Lukes  <dan+smartmontools.changelog@obluda.cz>

	drivedb.h: Intel DC S3500 Series SSDs

2013-08-12  Christian Franke  <franke@computer.org>

	drivedb.h: Intel 320 Series SSDs: Add attribute 183 and 199.

2013-08-10  Christian Franke  <franke@computer.org>

	autogen.sh: automake 1.10.3, 1.12.6, and 1.13.4 work.
	The new automake 1.14 is left out for now due to the
	'subdir-objects' warning and the new 'compile' script.
	Add options '--force' and '--warnings=CATEGORY'.

2013-07-26  Christian Franke  <franke@computer.org>

	smartmontools 6.2

2013-07-25  Christian Franke  <franke@computer.org>

	drivedb.h:
	- SandForce Driven SSDs: ADATA SP900
	- Transcend CompactFlash Cards: *GCF150
	- Hitachi/HGST Travelstar 5K750: Apple OEM
	- Hitachi/HGST Travelstar Z7K500
	- Hitachi/HGST Travelstar 7K750
	- Hitachi Deskstar 5K3000: *BLE630 OEM
	- Seagate Constellation ES.3
	- Western Digital Caviar Blue (SATA): Rename, add WD1602ABKS
	- Western Digital Caviar Blue (SATA 6Gb/s): Rename, add WD10EZEX
	- USB: Toshiba Canvio 3.0 Portable Hard Drive (0x0480:0xa007)
	- USB: Toshiba Canvio Desktop (0x0480:0xd010)
	- USB: Seagate FreeAgent Desk (0x0bc2:0x3008)